progresso na simulação de rede federada